--- a/package.json
+++ b/package.json
@@ -13,12 +13,24 @@
     "grunt-contrib-requirejs": "~0.4.1",
     "grunt-contrib-uglify": "~0.2.1",
     "grunt-strip": "~0.2.1",
+    "gulp": "^3.9.1",
+    "gulp-clean": "^0.3.2",
+    "gulp-concat": "^2.6.0",
+    "gulp-jshint": "^2.0.1",
+    "gulp-minify-css": "^1.2.4",
+    "gulp-rename": "^1.2.2",
     "jasmine-core": "^2.4.1",
+    "jshint": "^2.9.2",
     "karma": "^0.13.21",
     "karma-chrome-launcher": "^1.0.1",
     "karma-coverage": "^1.0.0",
     "karma-jasmine": "^1.0.2",
     "karma-requirejs": "^1.0.0",
     "requirejs": "^2.2.0"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": ""
+  },
+  "license": "ISC"
 }
