--- a/package.json
+++ b/package.json
@@ -19,8 +19,12 @@
     "gulp-concat": "^2.6.0",
     "gulp-filter": "^4.0.0",
     "gulp-jshint": "^2.0.1",
+    "gulp-less": "^3.1.0",
     "gulp-minify-css": "^1.2.4",
+    "gulp-notify": "^2.2.0",
+    "gulp-plumber": "^1.1.0",
     "gulp-rename": "^1.2.2",
+    "gulp-uglify": "^1.5.4",
     "jasmine-core": "^2.4.1",
     "jshint": "^2.9.2",
     "karma": "^0.13.21",
