--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "gulp-clean": "^0.3.2",
     "gulp-concat": "^2.6.0",
     "gulp-filter": "^4.0.0",
+    "gulp-htmlmin": "^2.0.0",
+    "gulp-imagemin": "^3.0.2",
     "gulp-jshint": "^2.0.1",
     "gulp-less": "^3.1.0",
     "gulp-minify-css": "^1.2.4",
@@ -32,6 +34,7 @@
     "karma-coverage": "^1.0.0",
     "karma-jasmine": "^1.0.2",
     "karma-requirejs": "^1.0.0",
+    "minifyjs": "^0.2.0",
     "requirejs": "^2.2.0"
   },
   "repository": {
