--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "gulp-notify": "^2.2.0",
     "gulp-plumber": "^1.1.0",
     "gulp-rename": "^1.2.2",
+    "gulp-strip-debug": "^1.1.0",
     "gulp-uglify": "^1.5.4",
     "jasmine-core": "^2.4.1",
     "jshint": "^2.9.2",
