--- a/package.json
+++ b/package.json
@@ -4,7 +4,16 @@
   "description": "webapi for fastmap",
   "homepage": "http://www.navinfo.com/",
   "author": "navinfo",
+  "scripts": {
+    "lint": "eslint ./apps ./script ./test/unit",
+    "lint:fix": "npm run lint -- --fix",
+    "doc": "jsdoc -r -c ./conf.json -d sdk",
+    "start": "http-server -a localhost -p 8000 -c-1 ../WebApp"
+  },
   "devDependencies": {
+    "eslint": "^3.8.1",
+    "eslint-config-airbnb-base": "^9.0.0",
+    "eslint-plugin-import": "^2.0.1",
     "del": "^2.2.1",
     "grunt": "~0.4.1",
     "grunt-contrib-clean": "~0.5.0",
@@ -30,6 +39,7 @@
     "gulp-uglify": "^1.5.4",
     "jasmine-core": "^2.4.1",
     "jshint": "^2.9.2",
+    "jsdoc": "^3.4.2",
     "karma": "^0.13.21",
     "karma-chrome-launcher": "^1.0.1",
     "karma-coverage": "^1.0.0",
