--- a/.eslintrc
+++ b/.eslintrc
@@ -4,12 +4,15 @@
   // 添加全局函数和对象
   "globals": {
   },
+  "plugins": ["angular"],
   /**
    * "off" 或 0 - 关闭规则
    * "warn" 或 1 - 开启规则，使用警告级别的错误：warn (不会导致程序退出),
    * "error" 或 2 - 开启规则，使用错误级别的错误：error (当被触发的时候，程序会退出)
    */
   "rules": {
+    // 开启4个空格缩进规则
+    "indent": ["error", 4],
     // 关闭规则，允许使用require
     "global-require": 0,
     // 关闭规则，允许函数中的参数不被使用
