--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "devDependencies": {
     "del": "^2.2.1",
-    "eslint": "^3.9.1",
+    "eslint": "^3.10.1",
     "eslint-config-airbnb-base": "^9.0.0",
     "eslint-config-angular": "^0.5.0",
     "eslint-plugin-angular": "^1.4.1",
@@ -48,8 +48,8 @@
     "karma-jasmine": "^1.0.2",
     "karma-requirejs": "^1.0.0",
     "minifyjs": "^0.2.0",
-    "requirejs": "^2.2.0",
-    "ng-dialog": "^0.6.4"
+    "ng-dialog": "^0.6.4",
+    "requirejs": "^2.2.0"
   },
   "repository": {
     "type": "git",
