--- a/.eslintrc
+++ b/.eslintrc
@@ -28,6 +28,8 @@
     "no-bitwise":0,
     // 允许使用一元操作符 ++ 和 --
     "no-plusplus":0,
+    // 允许var声明不在代码开始声明
+    "vars-on-top":0,
     // 允许标识符中含有下划线
     "no-underscore-dangle": 0,
     // 强制函数中的变量要么一起声明要么分开声明
