--- a/.eslintrc
+++ b/.eslintrc
@@ -7,7 +7,8 @@
     "L":true,
     "angular":true,
     "App":true,
-    "$":true
+    "$":true,
+    "swal":true
   },
   "plugins": ["angular"],
   /**
