--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "gulp-rename": "^1.2.2",
     "gulp-strip-debug": "^1.1.0",
     "gulp-uglify": "^1.5.4",
+    "http-server": "^0.9.0",
     "jasmine-core": "^2.4.1",
     "jsdoc": "^3.4.2",
     "jshint": "^2.9.2",
