--- a/.eslintrc
+++ b/.eslintrc
@@ -11,7 +11,12 @@
     "App":true,
     "$":true,
     "Utils":true,
-    "swal":true
+    "swal":true,
+    "it":true,
+    "expect":true,
+    "define":true,
+    "beforeEach":true,
+    "describe":true
   },
   "plugins": ["angular"],
   /**
@@ -45,7 +50,7 @@
     // 强制函数中的变量要么一起声明要么分开声明
     "one-var": [2, { "initialized": "never" }],
     // 允许对 function 的参数进行重新赋值
-    "no-param-reassign": 0,
+    "no-param-reassign": 0
     //允许方法使用在方式定义之前
     //"no-use-before-define":["error", { "functions": false}]
   }
