--- a/.eslintrc
+++ b/.eslintrc
@@ -55,8 +55,24 @@
     // 强制函数中的变量要么一起声明要么分开声明
     "one-var": [2, { "initialized": "never" }],
     // 允许对 function 的参数进行重新赋值
-    "no-param-reassign": 0
+    "no-param-reassign": 0,
     //允许方法使用在方式定义之前
     //"no-use-before-define":["error", { "functions": false}]
+    "no-mixed-operators": [
+      2,
+      {
+        "groups": [
+          ["&", "|", "^", "~", "<<", ">>", ">>>"],
+          ["==", "!=", "===", "!==", ">", ">=", "<", "<="],
+          ["&&", "||"],
+          ["in", "instanceof"]
+        ],
+        "allowSamePrecedence": true
+      }
+    ],
+    // 强制使用命名的 function 表达式
+    "func-names": 0,
+    // 关闭 === 替代 ==
+    "eqeqeq": 0
   }
 }
