--- a/.eslintrc
+++ b/.eslintrc
@@ -29,7 +29,7 @@
    */
   "rules": {
     // 开启4个空格缩进规则
-    "indent": ["error", 4],
+    "indent": [2, 4, { "SwitchCase": 1 }],
     // 关闭规则，允许使用require
     "global-require": 0,
     // 关闭规则，允许函数中的参数不被使用
