修改代码规范错误

--- a/.eslintrc
+++ b/.eslintrc
@@ -19,7 +19,8 @@
     "describe":true,
     "spyOn":true,
     "Application":true,
-    "jasmine":true
+    "jasmine":true,
+    "requirejs":true
   },
   "plugins": ["angular"],
   /**
